[gd_scene load_steps=24 format=3 uid="uid://bvu7pirbbb227"]

[ext_resource type="Script" uid="uid://ckgrihnd0a3n0" path="res://Stages/Main Menu/MainMenu.gd" id="1_0nmkc"]
[ext_resource type="Script" uid="uid://fm65gmeoowak" path="res://Common/Parallax/Parallax.gd" id="2_0gfro"]
[ext_resource type="Shader" uid="uid://dn55q4x8w2qor" path="res://Stages/Main Menu/RetroSun2.gdshader" id="3_srgqr"]
[ext_resource type="Texture2D" uid="uid://ymc1t3yh3lyo" path="res://Stages/Main Menu/Arts/Main Menu BG2.png" id="4_t1a3p"]
[ext_resource type="Texture2D" uid="uid://dwc2gl5ed6oan" path="res://Stages/Main Menu/Arts/Main Menu BG.png" id="5_3q2b3"]
[ext_resource type="PackedScene" uid="uid://dw8g5ywig87e6" path="res://Stages/Main Menu/Screens/Upgrade Screen/UpgradeScreen.tscn" id="6_c3g6r"]
[ext_resource type="PackedScene" uid="uid://r0lurvrabhid" path="res://Stages/Main Menu/Screens/Credits Screen/CreditScreen.tscn" id="7_0gk5e"]
[ext_resource type="PackedScene" uid="uid://biui2lf4kj5s7" path="res://Stages/Main Menu/Screens/How To Screen/HowToScreen.tscn" id="8_nnqyk"]
[ext_resource type="PackedScene" uid="uid://bfqnj4phlfd22" path="res://Stages/Main Menu/Screens/Settings Screen/SettingsScreen.tscn" id="9_r7ain"]
[ext_resource type="Texture2D" uid="uid://debgp12vx7d75" path="res://Stages/Main Menu/Arts/GameTitle.png" id="10_pgsnf"]
[ext_resource type="Texture2D" uid="uid://bselagskc8btp" path="res://Common/Game Button/GameButton.png" id="11_t0nfn"]
[ext_resource type="Script" uid="uid://ccu4a4ttx02ue" path="res://Common/Game Button/GameButton.gd" id="12_6txp8"]
[ext_resource type="FontFile" uid="uid://b2lwqd3u504hn" path="res://Assets/Fonts/BigSpace-rPKx.ttf" id="13_gnhod"]
[ext_resource type="Texture2D" uid="uid://kqnai0iox4j7" path="res://Stages/Main Menu/Arts/Setting Button.png" id="14_wfq8r"]
[ext_resource type="Texture2D" uid="uid://dcpmqvkx11h16" path="res://Stages/Main Menu/Arts/Help Button.png" id="15_wjypb"]
[ext_resource type="Texture2D" uid="uid://yg7nsvbic0na" path="res://Stages/Main Menu/Arts/Credits Button.png" id="16_b7kcx"]
[ext_resource type="PackedScene" uid="uid://bkh7youttg5o8" path="res://Stages/Main Menu/Screens/Upgrade Screen/Stats Section/Reset Layer/ResetLayer.tscn" id="17_etdde"]
[ext_resource type="Material" uid="uid://02532mgqwkc" path="res://Common/VHS/VHSShader.tres" id="18_lfycq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5o35t"]
shader = ExtResource("3_srgqr")
shader_parameter/color_top = Color(0.133333, 0.364706, 0.270588, 0.580392)
shader_parameter/color_bottom = Color(0, 0.286275, 0.243137, 0.729412)
shader_parameter/position = 0.114
shader_parameter/blend = 1.332
shader_parameter/angle = 145.282
shader_parameter/line_height_min = 0.0
shader_parameter/line_height_max = 0.015
shader_parameter/num_lines = 2
shader_parameter/speed = 0.1
shader_parameter/vertical_origin = 0.0
shader_parameter/self_modulate_alpha = 0.75

[sub_resource type="LabelSettings" id="LabelSettings_ua038"]
font = ExtResource("13_gnhod")
font_size = 500
font_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_txptg"]
resource_name = "Fade"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cmo68"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cmo68"]
_data = {
&"Fade": SubResource("Animation_txptg"),
&"RESET": SubResource("Animation_cmo68")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0nmkc")

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0.745098)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -74.0
offset_top = -35.0
offset_right = -74.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
mouse_filter = 2
color = Color(0.0253638, 0.0253638, 0.0253638, 1)

[node name="BGParrallax" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_0gfro")
max_parallax_offset = Vector2(1, 1)
smoothing = 1.5

[node name="TextureRect" type="TextureRect" parent="BGParrallax"]
material = SubResource("ShaderMaterial_5o35t")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -50.0
offset_right = -92.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.15, 1.15)
mouse_filter = 2
texture = ExtResource("4_t1a3p")
expand_mode = 3
stretch_mode = 5

[node name="BGParrallax2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_0gfro")
max_parallax_offset = Vector2(2, 2)
smoothing = 3.0

[node name="Background" type="TextureRect" parent="BGParrallax2"]
texture_filter = 1
texture_repeat = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -36.0
offset_top = -17.0
offset_right = -36.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.05, 1.05)
mouse_filter = 2
texture = ExtResource("5_3q2b3")
expand_mode = 3
stretch_mode = 5

[node name="Parallax" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_0gfro")

[node name="UpgradeScreen" parent="Parallax" instance=ExtResource("6_c3g6r")]
visible = false
layout_mode = 0
offset_left = 53.0
offset_top = 40.0
offset_right = 1002.13
offset_bottom = 540.0

[node name="CreditScreen" parent="Parallax" instance=ExtResource("7_0gk5e")]
visible = false
layout_mode = 0
offset_left = 53.0
offset_top = 40.0
offset_right = 1002.13
offset_bottom = 540.0

[node name="HowToScreen" parent="Parallax" instance=ExtResource("8_nnqyk")]
visible = false
layout_mode = 0
offset_left = 53.0
offset_top = 40.0
offset_right = 1002.13
offset_bottom = 540.0

[node name="SettingsScreen" parent="Parallax" instance=ExtResource("9_r7ain")]
visible = false
layout_mode = 0
offset_left = 53.0
offset_top = 40.0
offset_right = 1002.13
offset_bottom = 540.0

[node name="VBoxContainer" type="VBoxContainer" parent="Parallax"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -349.0
offset_top = -351.0
offset_right = -19.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 15

[node name="Logo" type="TextureRect" parent="Parallax/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
texture = ExtResource("10_pgsnf")
expand_mode = 3
stretch_mode = 5

[node name="Start" type="TextureButton" parent="Parallax/VBoxContainer"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("11_t0nfn")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("12_6txp8")

[node name="Label" type="Label" parent="Parallax/VBoxContainer/Start"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 9.0
offset_right = 2810.0
offset_bottom = 914.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 10000
text = "Play"
label_settings = SubResource("LabelSettings_ua038")
horizontal_alignment = 1
vertical_alignment = 1

[node name="upgrade" type="TextureButton" parent="Parallax/VBoxContainer"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("11_t0nfn")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("12_6txp8")

[node name="Label" type="Label" parent="Parallax/VBoxContainer/upgrade"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 9.0
offset_right = 2810.0
offset_bottom = 914.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 10000
text = "Upgrade"
label_settings = SubResource("LabelSettings_ua038")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="TextureButton" parent="Parallax/VBoxContainer"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("11_t0nfn")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("12_6txp8")

[node name="Label" type="Label" parent="Parallax/VBoxContainer/Quit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 9.0
offset_right = 2810.0
offset_bottom = 914.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 10000
text = "Exit"
label_settings = SubResource("LabelSettings_ua038")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Parallax"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = -75.0
offset_right = 231.0
offset_bottom = -25.0
grow_vertical = 0
theme_override_constants/separation = 25

[node name="Setting" type="TextureButton" parent="Parallax/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("14_wfq8r")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("12_6txp8")

[node name="HowTo" type="TextureButton" parent="Parallax/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("15_wjypb")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("12_6txp8")

[node name="Credits" type="TextureButton" parent="Parallax/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("16_b7kcx")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("12_6txp8")

[node name="ResetLayer" parent="." instance=ExtResource("17_etdde")]
visible = false
layout_mode = 1
offset_right = -74.0
offset_bottom = -35.0
scale = Vector2(1.1, 1.1)

[node name="PostProcessing" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Fade" type="ColorRect" parent="PostProcessing"]
visible = false
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -74.0
offset_top = -35.0
offset_right = -74.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="FadeAnimation" type="AnimationPlayer" parent="PostProcessing/Fade"]
libraries = {
&"": SubResource("AnimationLibrary_cmo68")
}

[node name="ColorRect" type="ColorRect" parent="PostProcessing"]
material = ExtResource("18_lfycq")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -74.0
offset_top = -35.0
offset_right = -74.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Parallax/UpgradeScreen/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="Parallax/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Parallax/VBoxContainer/upgrade" to="." method="_on_upgrade_pressed"]
[connection signal="pressed" from="Parallax/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Parallax/HBoxContainer/Setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="Parallax/HBoxContainer/HowTo" to="." method="_on_how_to_pressed"]
[connection signal="pressed" from="Parallax/HBoxContainer/Credits" to="." method="_on_credits_pressed"]

[editable path="Parallax/UpgradeScreen"]
[editable path="Parallax/UpgradeScreen/UpgradesContainer/HBoxContainer/ButtonsContainer/UpgradeButton"]
[editable path="Parallax/UpgradeScreen/UpgradesContainer/HBoxContainer/ButtonsContainer/UpgradeButton2"]
[editable path="Parallax/UpgradeScreen/UpgradesContainer/HBoxContainer/ButtonsContainer/UpgradeButton3"]
[editable path="Parallax/UpgradeScreen/UpgradesContainer/HBoxContainer/ButtonsContainer/UpgradeButton4"]
[editable path="Parallax/UpgradeScreen/UpgradesContainer/HBoxContainer/ButtonsContainer/UpgradeButton5"]
